@@ -5,7 +5,7 @@
 
     <manvolnum>5</manvolnum>
 
-    <refmiscinfo class="date">14 Feb 2016</refmiscinfo>
+    <refmiscinfo class="date">04 Apr 2016</refmiscinfo>
 
     <refmiscinfo class="source">@NETATALK_VERSION@</refmiscinfo>
   </refmeta>
@@ -1118,8 +1118,11 @@
           <emphasis>yes</emphasis>) <type>(G)</type></term>
 
           <listitem>
-            <para>Whether to start Tracker with 
-            <emphasis>tracker-control -s</emphasis>.</para>
+            <para>Whether to start Tracker with
+            "<command>tracker daemon -s</command>".
+            In case of old Tracker,
+            "<command>tracker-control -s</command>"
+            is used instead.</para>
           </listitem>
         </varlistentry>
 
